message MessageGreeting
{
    required int32 code = 1;
}
